--- a/projet_app_web_commerce/WebContent/panier.xhtml
+++ b/projet_app_web_commerce/WebContent/panier.xhtml
@@ -85,7 +85,7 @@
 
 						<p class="produit-grille-description"
 							style="text-align: justify; margin-left: 1rem">
-							Quantité selectionnée : <br /> #{lc.quantite}
+							Quantité selectionnée : <br /> #{panierBean.quantite}
 						</p>
 						<p:repeat var="nbligne" value="#{nombreLigneC}"></p:repeat>
 						<h:form>
