PanierBean, DAOClient, page xhtml ajouté

--- a/projet_app_web_commerce/WebContent/GestionProduit.xhtml
+++ b/projet_app_web_commerce/WebContent/GestionProduit.xhtml
@@ -52,7 +52,7 @@
 		<b:navbarLinks pull="right" styleClass="hidden-xs">
 			<b:navLink style="color:#FFA07A;" href="Magasin.xhtml">Magasin</b:navLink>
 			<b:navLink style="color:#FFA07A;" href="authentification.xhtml">S'identifier</b:navLink>
-			<b:navLink style="color:#FFA07A;" href="#">Panier</b:navLink>
+			<b:navLink style="color:#FFA07A;" href="panier.xhtml">Panier</b:navLink>
 
 
 		</b:navbarLinks>
