--- a/projet_app_web_commerce/WebContent/panier.xhtml
+++ b/projet_app_web_commerce/WebContent/panier.xhtml
@@ -105,7 +105,7 @@
 		<div
 			style="float: right; padding: 0; margin-right: 10%; margin-bottom: 70%;">
 			<p:commandButton value="Vider Panier" action="panier"
-				actionListener="#{panierBean.suppLigneCommande()}"
+				actionListener="#{panierBean.viderPanier()}"
 				style="margin-right:20px;" />
 				
 		</div>
